# graid

./: .gitignore  .gitmodules  LICENSE.md  LICENSE_MESH_ACADEMIC.md  README.md  YOLO_BDD_Workflow.md  bMMDetection.ipynb  bdd_depth_config.json  bdd_train_gt_dataset_config.json  bdd_ultra.yaml  check.sh  index.html  nuimages-wd-gen-output-2.txt  nuimages_gt_dataset_config.json  pyproject.toml  pyrightconfig.json  rcnn.ipynb  test_depth_questions_stacked.py  tox.ini  train_yolo_bdd.py  waymo-unique-output.txt  waymo-unique-wd-output.txt  waymo_gt_dataset_config.json  waymo_wd_dataset_config.json  yolo_wandb_tune.py
.github/workflows/: check.yaml  main.yml  todo_to_issue.yaml
evals/: coco_graphs.py  coco_stream.py  eval_mmdetection.py  eval_models.py  eval_mp.py  eval_seg.py  eval_vlms.py  eval_vlms_rev.py  graphs.py  metrics.py  prompting.py  prompts.py  test-vlm.py  vlm.py  vlms.py
graid/src/graid/: __init__.py  cli_helpers.py  graid.py  graid_cli.py  setup.py
graid/src/graid/cli/: __init__.py  config_manager.py  error_handler.py  exceptions.py  validators.py
graid/src/graid/data/: Datasets.py  ImageLoader.py  config_support.py  count_waymo.py  export_bdd_to_yolo.py  generate_dataset.py  generate_db.py  interactive_mode.py  loaders.py  select_waymo.py
graid/src/graid/evaluator/: eval_vlms.py  metrics.py  prompts.py  vlms.py
graid/src/graid/experiments/: finetune_detr_on_bdd.py
graid/src/graid/interfaces/: DepthPerceptionI.py  InstanceSegmentationI.py  ObjectDetectionI.py
graid/src/graid/measurements/: InstanceSegmentation.py  ObjectDetection.py
graid/src/graid/models/: DINO_idea.py  DepthPro.py  Detectron.py  MMDetection.py  Ultralytics.py  WBF.py  grounded_sam.py
graid/src/graid/questions/: ObjectDetectionQ.py  QUESTION_ROBUSTNESS.md
graid/src/graid/utilities/: coco.py  common.py  sam_utils.py
graid/src/graid/utils/: profiling.py
graid/src/graid/verification/: precision_verifier.py  recall_verifier.py  region_verifier.py
graid/src/scenic_reasoning/: graid_cli.py
graid/src/scenic_reasoning/data/: Datasets.py  ImageLoader.py  eval_db.py  generate_db.py
graid/src/scenic_reasoning/evaluator/: metrics.py
graid/src/scenic_reasoning/interfaces/: InstanceSegmentationI.py
graid/src/scenic_reasoning/measurements/: ObjectDetection.py
graid/src/scenic_reasoning/models/: DepthPro.py  Detectron.py  MMDetection.py  Ultralytics.py
graid/src/scenic_reasoning/questions/: ObjectDetectionQ.py
graid/tests/: count_questions.py  detection_inst_seg.py  test_detectron_seg_batch.py  test_integration.py  test_neural_classifiers.py  test_threshold_functionality.py  test_validation_pipeline.py
notebooks/: apple-ml-depth-pro.ipynb  bMMDetection.ipynb  bdd_100k.ipynb  bdd_10k.ipynb  bdd_sample_inference.ipynb  coco.py  coco_stream.py  db_mAP.py  dino.ipynb  download_waymo_open.ipynb  filter_bdd.py  filter_dataset.py  hf_transformers.py  histogram.py  launch_coco.sh  mAP.py  manual_question_evaluation.ipynb  manual_question_evaluation_fixed.py  ml_od_mmdetection_ver3_3_0_tested.ipynb  mmdetection.ipynb  nuscenes_tutorial.ipynb  object_detection.ipynb  openSpatialDataset.py  pick-examples.ipynb  scratch.ipynb  som.py  som_unsort.py  summarize_eval.py  test_detectron_obj.py  test_mmdetection_obj.py  test_ultralytics_obj.py  test_ultralytics_seg.py  test_waymo_dataloader.ipynb  timm_detection.ipynb  ultralytics.ipynb  ultralytics_seg.ipynb  waymo_prompt_test.py
nuimages_gt_dataset/: graid_profiling.json
scenic_reasoning/src/scenic_reasoning/: setup.py  test.py
scenic_reasoning/src/scenic_reasoning/data/: Datasets.py  ImageLoader.py  count_waymo.py  eval_db.py  generate_db.py  select_waymo.py
scenic_reasoning/src/scenic_reasoning/eval/: eval_mmdetection.py  eval_models.py  eval_vlms.py  prompts.py  vlm.py
scenic_reasoning/src/scenic_reasoning/evaluation/: evaluate_models.py
scenic_reasoning/src/scenic_reasoning/evaluator/: metrics.py  prompts.py  vlms.py
scenic_reasoning/src/scenic_reasoning/interfaces/: DepthPerceptionI.py  DepthPro.py  InstanceSegmentationI.py  ObjectDetectionI.py  Owen's README.md
scenic_reasoning/src/scenic_reasoning/interfaces/instanceSeg/: pyvenv.cfg
scenic_reasoning/src/scenic_reasoning/measurements/: InstanceSegmentation.py  ObjectDetection.py
scenic_reasoning/src/scenic_reasoning/models/: DINO_idea.py  DepthPro.py  Detectron.py  MMDetection.py  MMdetection.py  Ultralytics.py  UltralyticsYolo.py  bMMDetection.py
scenic_reasoning/src/scenic_reasoning/prompting/: prompting.py
scenic_reasoning/src/scenic_reasoning/questions/: ObjectDetection.py  ObjectDetectionQ.py
scenic_reasoning/src/scenic_reasoning/utilities/: coco.py  common.py
scenic_reasoning/tests/: count_questions.py  detection_inst_seg.py
static/css/: index.css
tests/: README.md  test_detectron_obj.py  test_dino_obj.py  test_mmdetection_obj.py  test_mmdetection_seg.py  test_questions.py  test_ultralytics_obj.py  test_ultralytics_seg.py
tests/manual_tests/: README.md  test_detectron_obj.py  test_detectron_seg_visual.py  test_dino_obj.py  test_mask2former_panoptic.py  test_mask2former_seg.py  test_mmdetection_obj.py  test_mmdetection_seg.py  test_questions.py  test_ultralytics_obj.py  test_ultralytics_seg.py  test_wbf_obj_visual.py
tests/unit_tests/: README.md  count_questions.py  detection_inst_seg.py  test_coco_utilities.py  test_config_support.py  test_dataset_generation.py  test_datasets.py  test_eval_vlms_interface.py  test_generate_db.py  test_imageloader.py  test_integration.py  test_neural_classifiers.py  test_threshold_functionality.py  test_validation_pipeline.py
waymo_gt_dataset_unique/: graid_profiling.json
waymo_gt_dataset_unique_wd/: graid_profiling.json
