[tool.poetry]
name = "scenic-reasoning"
version = "0.1.0"
description = "Can VLMs reason about the physical relationships of everyday scenes? We find out in the realm of robotics and autonomous driving"
authors = ["Karim Elmaaroufi <elmaaroufi@berkeley.edu>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "scenic_reasoning", from = "scenic_reasoning/src"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.5.0"
timm = "^1.0.11"
ipykernel = "^6.29.5"
transformers = "^4.45.2"
ultralytics = "^8.3.21"
opencv-python = "^4.10.0.84"
torchmetrics = "^1.6.0"


[tool.poetry.scripts]
install_depth_pro  = "scenic_reasoning.setup:install_depth_pro"
install_detectron2 = "scenic_reasoning.setup:install_detectron2"
install_mmdetection = "scenic_reasoning.setup:install_mmdetection"
install_all = "scenic_reasoning.setup:install_all"
clean_all = "scenic_reasoning.setup:clean_all"
clean_depth_pro = "scenic_reasoning.setup:clean_depth_pro"
clean_detectron2 = "scenic_reasoning.setup:clean_detectron2"
clean_mmdetection = "scenic_reasoning.setup:clean_mmdetection"
download_nuscenes = "scenic_reasoning.setup:download_nuscenes"
download_bdd = "scenic_reasoning.setup:download_bdd"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8-bugbear = "^24.10.31"
flake8-annotations = "^3.1.1"
nbconvert = "^7.16.4"


[tool.poetry.group.mmdetection.dependencies]
openmim = "^0.3.9"

[build-system]
requires = [ "setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.isort]
profile = "black"